[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nauert"
version = "3.21"
description = "Nauert extends Abjad with tools for rhythm quantization."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["lilypond", "music composition", "music notation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software"
]
dependencies = [
    "abjad>=3.21"
]

[[project.authors]]
name = "Joséphine Wolf Oberholtzer"
email = "josephine.wolf.oberholtzer@gmail.com"

[[project.authors]]
name = "Tsz Kiu Pang"
email = "osamupang@gmail.com"

[project.urls]
Homepage = "http://nauert.github.io"

[tool.setuptools]
package-dir = { "" = "source" }

[tool.setuptools.packages.find]
where = ["source"]
include = ["nauert*"]
